8367413: Refactor types in Arguments::set_heap_size()